# react-native-bs-diff-patch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  lefthook.yml  package.json  react-native-bs-diff-patch.podspec  tsconfig.build.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/newarch/java/com/jimmydaddy/bsdiffpatch/: BsDiffPatchModule.kt  BsDiffPatchPackage.kt
android/newarch73/java/com/jimmydaddy/bsdiffpatch/: BsDiffPatchPackage.kt
android/newarch74/java/com/jimmydaddy/bsdiffpatch/: BsDiffPatchPackage.kt
android/oldarch/java/com/jimmydaddy/bsdiffpatch/: BsDiffPatchModule.kt  BsDiffPatchPackage.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bsdiffpatch/: BsDiffPatchModule.java  BsDiffPatchPackage.java
android/src/main/java/com/jimmydaddy/bsdiffpatch/: BsDiffPatchModule.kt  BsDiffPatchModuleSupport.kt  BsDiffPatchNative.kt  BsDiffPatchPackage.kt  BsDiffPatchTaskRunner.kt
benchmarks/: README.md  native-core-large.json  native-core.json  web-wasm-large.json  web-wasm.json
cpp/: bsdiff.c  bsdiff.h  bsdiffpatch_operation.h  bspatch.c  bspatch.h  react-native-bs-diff-patch.cpp  react-native-bs-diff-patch.h
docs/: README.md  api-reference.md  architecture.md  development.md  getting-started.md  large-files-v04.md  native-operations-v03.md  platform-support.md  recipes.md  troubleshooting.md
example/: Gemfile  app.json  metro.config.js  package.json
ios/: BsDiffPatch.h  (+1 more)
(+89 files in other folders)
